Dockerizing the app with 2 containers from docker-compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=gestion-bibliotheque-clap-partner
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://bibliotheque_db:5432/book_db
+spring.datasource.url=jdbc:postgresql://clap-partners-postgres:5432/bibliotheque_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 server.port=8080
@@ -27,5 +27,5 @@ springdoc.api-docs.path=/assiganto-registration-openapi
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 springdoc.swagger-ui.layout=BaseLayout
 springdoc.swagger-ui.validatorUrl=validator.swagger.io/validator
-springdoc.swagger-ui.configUrl=/assiganto-registration-openapi/swagger-config
+springdoc.swagger-ui.configUrl=/gestion-bibliotheque-openapi/swagger-config
 springdoc.swagger-ui.operationsSorter=method
