--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=gestion-bibliotheque-clap-partner
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://clap-partners-postgres:5432/bibliotheque_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/clap_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 server.port=8080
@@ -10,7 +10,7 @@ server.port=8080
 spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
 
-spring.sql.init.mode=
+spring.sql.init.mode=always
 spring.datasource.initialize=true
 spring.sql.init.schema-locations=classpath:/schema.sql
 spring.sql.init.continue-on-error=true
@@ -23,7 +23,7 @@ springdoc.swagger-ui.use-root-path=true
 
 # Enabling the swagger-ui
 springdoc.swagger-ui.enabled=true
-springdoc.api-docs.path=/assiganto-registration-openapi
+springdoc.api-docs.path=/gestion-bibliotheque-openapi
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 springdoc.swagger-ui.layout=BaseLayout
 springdoc.swagger-ui.validatorUrl=validator.swagger.io/validator
