--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,11 +21,5 @@ spring.main.allow-bean-definition-overriding=true
 #springdoc.version=@springdoc.version@
 springdoc.swagger-ui.use-root-path=true
 
-# Enabling the swagger-ui
-springdoc.swagger-ui.enabled=true
-springdoc.api-docs.path=/gestion-bibliotheque-openapi
-springdoc.swagger-ui.path=/swagger-ui-custom.html
-springdoc.swagger-ui.layout=BaseLayout
-springdoc.swagger-ui.validatorUrl=validator.swagger.io/validator
-springdoc.swagger-ui.configUrl=/gestion-bibliotheque-openapi/swagger-config
-springdoc.swagger-ui.operationsSorter=method
+# /api-docs endpoint custom path
+springdoc.api-docs.path=/api-docs
